--- a/src/App.scss
+++ b/src/App.scss
@@ -1,42 +1,57 @@
 body {
   font-family: "Helvetica Neue","Helvetica","Arial","sans-serif";
+
   color: #ff9900;
-  background-color: #111; }
+  background-color: #111;
+}
 
 .header-container {
   width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-bottom: 2px solid white; }
+  border-bottom: 2px solid white;
+}
 
 .departure-list {
+
   width: 100vw;
-  padding: 0px; }
-  .departure-list li {
-    list-style-type: none; }
+  padding: 0px;
+
+  li {
+    list-style-type: none;
+  }
+}
 
 .departure-row {
   height: 10vh;
   max-width: 400px;
   padding: 5px;
+
   display: flex;
   flex-direction: row;
   align-content: center;
-  justify-content: space-between; }
-  .departure-row .time-container {
+  justify-content: space-between;
+
+  .time-container {
     display: flex;
     flex-direction: column;
     align-items: right;
     justify-content: space-around;
     width: 20vw;
-    text-align: right; }
-  .departure-row .location-container {
+    text-align: right;
+  }
+
+  .location-container {
     display: flex;
     flex-direction: column;
     align-items: left;
-    justify-content: space-around; }
+    justify-content: space-around;
+
+  }
+}
 
 .header {
   height: 10vh;
-  background-color: #111; }
+  background-color: #111;
+}
