--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Helvetica Neue","Helvetica","Arial","sans-serif";
+  font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
   color: #ff9900;
   background-color: #111; }
 
@@ -12,30 +12,50 @@ body {
 
 .departure-list {
   width: 100vw;
-  padding: 0px; }
+  padding: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
   .departure-list li {
     list-style-type: none; }
 
-.departure-row {
-  height: 10vh;
-  max-width: 400px;
-  padding: 5px;
+.departure-container {
   display: flex;
-  flex-direction: row;
-  align-content: center;
-  justify-content: space-between; }
-  .departure-row .time-container {
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 100vw;
+  max-width: 400px; }
+  .departure-container .departure-row {
+    height: 10vh;
+    padding: 5px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-between;
+    cursor: pointer; }
+    .departure-container .departure-row .time-container {
+      display: flex;
+      flex-direction: column;
+      align-items: right;
+      justify-content: space-around;
+      width: 20%;
+      text-align: right; }
+    .departure-container .departure-row .location-container {
+      display: flex;
+      flex-direction: column;
+      align-items: left;
+      justify-content: space-around;
+      width: 80%; }
+  .departure-container .calling-points {
     display: flex;
     flex-direction: column;
-    align-items: right;
-    justify-content: space-around;
-    width: 20vw;
-    text-align: right; }
-  .departure-row .location-container {
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    justify-content: space-around; }
+    align-content: center;
+    width: 100%; }
+    .departure-container .calling-points li {
+      width: 100%;
+      padding: 5px 0; }
 
 .header {
   height: 10vh;
