--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: "Helvetica Neue","Helvetica","Arial","sans-serif";
+  font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
 
   color: #ff9900;
   background-color: #111;
@@ -14,40 +14,67 @@ body {
 }
 
 .departure-list {
-
   width: 100vw;
   padding: 0px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   li {
     list-style-type: none;
   }
 }
 
-.departure-row {
-  height: 10vh;
-  max-width: 400px;
-  padding: 5px;
-
+.departure-container {
   display: flex;
-  flex-direction: row;
-  align-content: center;
+  flex-direction: column;
+  align-items: center;
   justify-content: space-between;
+  width: 100vw;
+  max-width: 400px;
 
-  .time-container {
+
+  .departure-row {
+    height: 10vh;
+    padding: 5px;
+    width: 100%;
+
     display: flex;
-    flex-direction: column;
-    align-items: right;
-    justify-content: space-around;
-    width: 20vw;
-    text-align: right;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-between;
+
+    cursor: pointer;
+
+    .time-container {
+      display: flex;
+      flex-direction: column;
+      align-items: right;
+      justify-content: space-around;
+      width: 20%;
+      text-align: right;
+    }
+
+    .location-container {
+      display: flex;
+      flex-direction: column;
+      align-items: left;
+      justify-content: space-around;
+      width: 80%;
+    }
   }
-
-  .location-container {
+  .calling-points {
     display: flex;
     flex-direction: column;
-    align-items: left;
-    justify-content: space-around;
+    align-content: center;
 
+    width: 100%;
+
+    li {
+      width: 100%;
+      padding: 5px 0;
+    }
   }
 }
 
